fixed linebreaks in analytics and updated ideascale links from the site to be direct instead of using bitly

--- a/static/style.css
+++ b/static/style.css
@@ -302,7 +302,7 @@ a img {
     border: none;
 }
 
-.agency_table {
+#agency_table {
     width: 1000px;
 }
 
